[gd_scene load_steps=2 format=3 uid="uid://ai_boss"]

[ext_resource type="Script" path="res://scripts/ai_boss.gd" id="1_boss"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(50, 70)

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 35.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2"]
radius = 50.0

[node name="AIBoss" type="CharacterBody2D"]
script = ExtResource("1_boss")
boss_name = "暗影领主"
max_hp = 20
hp = 20

[node name="Body" type="ColorRect" parent="."]
offset_left = -25.0
offset_top = -35.0
offset_right = 25.0
offset_bottom = 35.0
color = Color(0.4, 0.2, 0.6, 1)

[node name="EyeLeft" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -20.0
offset_right = -8.0
offset_bottom = -8.0
color = Color(1, 1, 1, 1)

[node name="EyeRight" type="ColorRect" parent="."]
offset_left = 8.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = -8.0
color = Color(1, 1, 1, 1)

[node name="PupilLeft" type="ColorRect" parent="."]
offset_left = -17.0
offset_top = -17.0
offset_right = -11.0
offset_bottom = -11.0
color = Color(0.8, 0.1, 0.1, 1)

[node name="PupilRight" type="ColorRect" parent="."]
offset_left = 11.0
offset_top = -17.0
offset_right = 17.0
offset_bottom = -11.0
color = Color(0.8, 0.1, 0.1, 1)

[node name="EyeGlow" type="ColorRect" parent="."]
offset_left = -22.0
offset_top = -22.0
offset_right = 22.0
offset_bottom = 22.0
color = Color(0.8, 0.4, 1, 0.3)
z_index = -1

[node name="HurtArea" type="Area2D" parent="."]

[node name="HurtCollision" type="CollisionShape2D" parent="HurtArea"]
shape = SubResource("RectangleShape2D_1")

[node name="AttackArea" type="Area2D" parent="."]

[node name="AttackCollision" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_2")

[node name="WarningIndicator" type="ColorRect" parent="."]
offset_left = -30.0
offset_top = -50.0
offset_right = 30.0
offset_bottom = -45.0
color = Color(1, 0.2, 0.2, 0)
z_index = 10
